# Text-to-SQL-Interface

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: eval_results.json  golden_dataset.json  init_readonly_user.sql  init_seed.sql  sample_db.sqlite
docs/: Text-to-SQL Interface.md  architecture.md  learning_path_text_to_sql.md
frontend/: Dockerfile  package-lock.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AmbiguityCard.jsx  ConfidenceBreakdown.jsx  DataTable.jsx  FeedbackWidget.jsx  Header.jsx  HistorySidebar.jsx  QueryInput.jsx  SqlViewer.jsx
scripts/: run_evals.py
src/: __init__.py
src/application/dtos/: __init__.py  query_dto.py
src/application/use_cases/: __init__.py  evaluate_queries.py  extract_schema.py  process_text_to_sql.py  submit_feedback.py
src/core/: __init__.py  config.py  container.py  exceptions.py  logger.py
src/domain/entities/: __init__.py  (+4 more)
src/infrastructure/: __init__.py
src/presentation/: __init__.py
tests/: conftest.py
tests/evaluation/: __init__.py  test_golden_dataset.py  test_security_injection.py
tests/integration/: test_api_endpoints.py  test_db_sandbox.py  test_eval_suite.py  test_execution_layer.py
tests/unit/: test_ambiguity.py  test_back_translation.py  test_confidence.py  test_confidence_evaluator.py  test_consensus_engine.py  test_feedback_flywheel.py  test_golden_dataset.py  test_guardrails.py  test_prompt_builder.py  test_sanity_checker.py  test_schema_extractor.py  test_schema_retriever.py  test_structured_output.py
(+37 files in other folders)
