[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-sql-interface"
version = "0.1.0"
description = "A production-grade Text-to-SQL interface with safety guardrails and hallucination detection based on Clean Architecture."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Hafidz", email = "hafidz@example.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "duckdb>=0.10.0",
    "instructor>=1.2.0",
    "openai>=1.14.0",
    "anthropic>=0.20.0",
    "sqlparse>=0.4.4",
    "pandas>=2.2.0",
    "sentence-transformers>=2.5.0",
    "streamlit>=1.32.0",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
